src/test/ui/methods/method-call-type-binding.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/method-call-type-binding.rs:2:15
   |
LL |     0.clone::<T = u8>();
   |               ^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
