src/test/ui/methods/method-call-type-binding.rs
fn main() {
    0.clone::<T = u8>(); //~ ERROR associated type bindings are not allowed here
}
